{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 37,
  "lineage": "82c139c8-6c4a-f2ed-0b4a-f7a4aa885bdb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070e77a77965f1f3d",
            "association_id": "eipassoc-09f3750d07fe360b7",
            "domain": "vpc",
            "id": "eipalloc-070e77a77965f1f3d",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0fdfc87af20247577",
            "private_dns": "ip-10-57-2-117.us-west-2.compute.internal",
            "private_ip": "10.57.2.117",
            "public_dns": "ec2-54-185-48-241.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.48.241",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:873748645014:internet-gateway/igw-08e46bc467a89152f",
            "id": "igw-08e46bc467a89152f",
            "owner_id": "873748645014",
            "tags": {
              "Name": "banyan-demo-main-igw"
            },
            "tags_all": {
              "Name": "banyan-demo-main-igw"
            },
            "vpc_id": "vpc-07c11b406cd3d4718"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070e77a77965f1f3d",
            "connectivity_type": "public",
            "id": "nat-08a511793d63bfe3c",
            "network_interface_id": "eni-0fdfc87af20247577",
            "private_ip": "10.57.2.117",
            "public_ip": "54.185.48.241",
            "subnet_id": "subnet-0367cdf05c0ac1bab",
            "tags": {
              "Name": "banyan-demo-main-nat"
            },
            "tags_all": {
              "Name": "banyan-demo-main-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-084c91489f2955f7f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08a511793d63bfe3c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-084c91489f2955f7f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_eip.nat_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08e46bc467a89152f",
            "id": "r-rtb-02d5e050694ffd7141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d5e050694ffd714",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:873748645014:route-table/rtb-084c91489f2955f7f",
            "id": "rtb-084c91489f2955f7f",
            "owner_id": "873748645014",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08a511793d63bfe3c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "banyan-demo-private-route-table"
            },
            "tags_all": {
              "Name": "banyan-demo-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c11b406cd3d4718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:873748645014:route-table/rtb-02d5e050694ffd714",
            "id": "rtb-02d5e050694ffd714",
            "owner_id": "873748645014",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e46bc467a89152f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "banyan-demo-public-route-table"
            },
            "tags_all": {
              "Name": "banyan-demo-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c11b406cd3d4718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af2fc00aca3c388b",
            "route_table_id": "rtb-084c91489f2955f7f",
            "subnet_id": "subnet-0b7a39ebe1c73d7f0"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de971adf35aa79e9",
            "route_table_id": "rtb-02d5e050694ffd714",
            "subnet_id": "subnet-0367cdf05c0ac1bab"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:873748645014:security-group/sg-02b34ecd29947f0ee",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-02b34ecd29947f0ee",
            "ingress": [],
            "name": "banyan-demo-default-sg",
            "name_prefix": "",
            "owner_id": "873748645014",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c11b406cd3d4718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:873748645014:subnet/subnet-0b7a39ebe1c73d7f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.57.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7a39ebe1c73d7f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873748645014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banyan-demo-private"
            },
            "tags_all": {
              "Name": "banyan-demo-private"
            },
            "vpc_id": "vpc-07c11b406cd3d4718"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:873748645014:subnet/subnet-0367cdf05c0ac1bab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.57.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0367cdf05c0ac1bab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "873748645014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banyan-demo-public"
            },
            "tags_all": {
              "Name": "banyan-demo-public"
            },
            "vpc_id": "vpc-07c11b406cd3d4718"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:873748645014:vpc/vpc-07c11b406cd3d4718",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.57.0.0/16",
            "default_network_acl_id": "acl-0ab8b38fd28dc8992",
            "default_route_table_id": "rtb-01722072757320242",
            "default_security_group_id": "sg-0d7c58c39e5486c8d",
            "dhcp_options_id": "dopt-e8cfef90",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07c11b406cd3d4718",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01722072757320242",
            "owner_id": "873748645014",
            "tags": {
              "Name": "banyan-demo-main"
            },
            "tags_all": {
              "Name": "banyan-demo-main"
            }
          }
        }
      ]
    }
  ]
}